--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,5 +1,11 @@
+// Supports weights 200-800
+@import '@fontsource-variable/dosis';
 *{
     margin: 0;
     padding:0;
     box-sizing: border-box;
+    
+}
+body{
+    background-color: #141414;
 }
