add: creazione lista top 20 film

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,5 +1,6 @@
 // Supports weights 200-800
 @import '@fontsource-variable/dosis';
+@import '@fontsource/fira-sans';
 *{
     margin: 0;
     padding:0;
